--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,6 +1,25 @@
 {
   "version": "2.0.0",
   "tasks": [
+
+    {
+      "label": "Sort Flutter Imports",
+      "type": "shell",
+      "command": "flutter pub run import_sorter:main -e",
+      "problemMatcher": [],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "focus": false,
+        "panel": "shared",
+        "showReuseMessage": true,
+        "clear": true
+      }
+    },
     {
       "label": "gitCommitPush",
       "type": "shell",
