--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,8 +36,11 @@
         "terminal.ansiMagenta": "#8F4673",
         "terminal.ansiRed": "#FB543F",
         "terminal.ansiWhite": "#A89984",
-        "terminal.ansiYellow": "#FAC03B"
+        "terminal.ansiYellow": "#FAC03B",
+        "editorWarning.background": "#1D2021",
+        "editorHint.foreground": "#808080",
+        "editorHint.border": "#1D2021",
+        "editorWarning.border": "#1D2021"
     },
     "peacock.color": "#800047"
-    
 }
