🐞 fix(UI / UX):
Improve some UI design and UX on some page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ flutter:
     - assets/icons/
     - assets/translations/
     - assets/fonts/
+    - assets/lottie/
 
   fonts:
     - family: Praise
