--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.magenta">
+    package="com.magenta.repo">
 
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 <!--    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />-->
@@ -22,7 +22,7 @@
             <data android:scheme="tel" />
         </intent>
         <!--#enddocregion android-queries-->
-        <!-- The "https" scheme is only required for integration tests of this package="com.nbs.alphameal">
+        <!-- The "https" scheme is only required for integration tests of this package="com.magenta.repo">
              It shouldn't be needed in most actual apps, or show up in the README! -->
         <intent>
             <action android:name="android.intent.action.VIEW" />
