--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+# UI packages
   cupertino_icons: ^1.0.6
-  flutter_screenutil: ^5.9.0
   bot_toast: ^4.1.3
   carousel_slider: ^4.2.1
   cached_network_image: ^3.3.1
@@ -22,11 +22,7 @@ dependencies:
   firebase_core: ^3.1.0
   firebase_messaging: ^15.0.1
   flutter_local_notifications: ^17.0.0
-  flutter_bloc: ^8.1.5
   flutter_svg: ^2.0.10+1
-  get_it: ^7.6.8
-  auto_route: ^8.0.2
-  injectable: ^2.4.1
   internet_connection_checker: ^1.0.0+1
   json_annotation: ^4.8.1
   path: ^1.9.0
@@ -63,7 +59,16 @@ dependencies:
   fluttertoast: ^8.2.4
   smooth_page_indicator: ^1.1.0
   sliver_tools: ^0.2.12
-
+  equatable: ^2.0.5
+#Service Locator
+  get_it: ^7.6.8
+  injectable: ^2.4.1
+# router
+  auto_route: ^8.0.2
+#responsive
+  flutter_screenutil: ^5.9.0
+#state management
+  flutter_bloc: ^8.1.5
 
 dev_dependencies:
   flutter_test:
