--- a/.gitignore
+++ b/.gitignore
@@ -41,5 +41,5 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
-# # environment variables
-# env/
+# environment variables
+env/
