--- a/packages/core/pubspec.yaml
+++ b/packages/core/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   auto_size_text: ^3.0.0
   either_dart: ^1.0.0
-  file_picker: ^6.1.1
+  file_picker: ^8.0.6
   dio: ^5.3.4
   flutter:
     sdk: flutter
@@ -34,6 +34,7 @@ dependencies:
   flutter_image_compress: ^2.1.0
   image_cropper: ^7.0.5
   image_picker: ^1.0.4
+  flutter_blurhash: ^0.8.2
   mime: ^1.0.4 # for file type lookup
   path_provider: ^2.1.1
   logger: ^2.0.2+1
@@ -43,7 +44,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
   build_runner: ^2.4.6
   flutter_gen_runner: ^5.3.2
 
