--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,6 @@ dependencies:
   firebase_core: ^3.1.0
   firebase_messaging: ^15.0.1
   flutter_local_notifications: ^17.0.0
-  flutter_svg: ^2.0.10+1
   internet_connection_checker: ^1.0.0+1
   json_annotation: ^4.8.1
   path: ^1.9.0
@@ -34,17 +33,6 @@ dependencies:
   shimmer: ^3.0.0
   timezone: ^0.9.2
   logger: ^2.2.0
-  intl: ^0.19.0
-  uuid: ^4.3.3
-  json_serializable: ^6.7.1
-  flutter_form_builder: ^9.2.1
-  flutter_gen: ^5.4.0
-  dropdown_button2: ^2.3.9
-  just_the_tooltip: ^0.0.12
-  flutter_image_compress: ^2.2.0
-  image_cropper: ^7.0.5
-  image_picker: ^1.0.7
-  path_provider: ^2.1.2
   flutter_launcher_icons: ^0.13.1
   form_builder_validators: ^10.0.1
   pinput: ^5.0.0
@@ -55,7 +43,6 @@ dependencies:
   jwt_decoder: ^2.0.1
   loader_overlay: ^4.0.0
   google_sign_in: ^6.2.1
-  flutter_blurhash: ^0.8.2
   firebase_auth: ^5.1.0
   sms_autofill: ^2.3.1
   url_launcher: ^6.2.6
@@ -63,6 +50,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   sliver_tools: ^0.2.12
   equatable: ^2.0.5
+  in_app_purchase: ^3.2.0
 #Service Locator
   get_it: ^7.6.8
   injectable: ^2.4.1
@@ -72,6 +60,8 @@ dependencies:
   flutter_screenutil: ^5.9.0
 #state management
   flutter_bloc: ^8.1.5
+  firebase_crashlytics: ^4.0.3
+  firebase_analytics: ^11.2.0
 
 dev_dependencies:
   flutter_test:
