--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,11 @@ dependencies:
 
   cupertino_icons: ^1.0.6
   bot_toast: ^4.1.3
-  carousel_slider: ^4.2.1
-  cached_network_image: ^3.3.1
+  flutter_carousel_widget:
+    git:
+      url: https://github.com/amarjeetpatidar007/flutter_carousel_widget.git
+      ref: master
+  cached_network_image: ^3.4.0
   dio: ^5.4.2+1
   easy_localization: ^3.0.5
   dartz: ^0.10.1
@@ -61,6 +64,9 @@ dependencies:
   flutter_screenutil: ^5.9.0
 #state management
   flutter_bloc: ^8.1.5
+  bloc_concurrency: ^0.2.5
+
+  # FireBase
   firebase_crashlytics: ^4.0.3
   firebase_analytics: ^11.2.0
 
