✨ feat(Favourite page & details page Backend):
Link Favourite page & details page with backend

--- a/packages/core/pubspec.yaml
+++ b/packages/core/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path_provider: ^2.1.1
   logger: ^2.0.2+1
   flutter_launcher_icons: ^0.13.1
+  cached_network_image: ^3.4.0
 # router
   auto_route: ^8.0.2  
 dev_dependencies:
