--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,7 +56,7 @@ android {
         }
         stag {
           dimension "app"
-          applicationId "com.magenta.stag"          
+          applicationId "com.magenta.stage"          
         }
     }
     defaultConfig {
