--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,16 @@
 name: magenta
 description: "A new Flutter project."
 
-publish_to: 'none'
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.2 <4.0.0'
-
+  sdk: ">=3.3.2 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-# UI packages
+  # UI packages
   core:
     path: packages/core
 
@@ -28,7 +27,7 @@ dependencies:
   firebase_core: ^3.1.0
   firebase_messaging: ^15.0.1
   flutter_local_notifications: ^17.0.0
-  internet_connection_checker: ^1.0.0+1
+  internet_connection_checker: ^2.0.0
   json_annotation: ^4.8.1
   path: ^1.9.0
   flutter_animate: ^4.5.0
@@ -37,7 +36,7 @@ dependencies:
   timezone: ^0.9.2
   logger: ^2.2.0
   flutter_launcher_icons: ^0.13.1
-  form_builder_validators: ^10.0.1
+  form_builder_validators: ^11.0.0
   pinput: ^5.0.0
   lottie: ^3.1.0
   modal_bottom_sheet: ^3.0.0
@@ -45,8 +44,6 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   jwt_decoder: ^2.0.1
   loader_overlay: ^4.0.0
-  google_sign_in: ^6.2.1
-  firebase_auth: ^5.1.0
   sms_autofill: ^2.3.1
   url_launcher: ^6.2.6
   fluttertoast: ^8.2.4
@@ -55,14 +52,14 @@ dependencies:
   equatable: ^2.0.5
   in_app_purchase: ^3.2.0
   flutter_form_builder: ^9.3.0
-#Service Locator
+  #Service Locator
   get_it: ^7.6.8
   injectable: ^2.4.1
-# router
-  auto_route: ^8.0.2
-#responsive
+  # router
+  auto_route: ^9.2.2
+  #responsive
   flutter_screenutil: ^5.9.0
-#state management
+  #state management
   flutter_bloc: ^8.1.5
   bloc_concurrency: ^0.2.5
 
@@ -81,7 +78,7 @@ dev_dependencies:
   change_app_package_name: ^1.1.0
   freezed: ^2.3.5
   freezed_annotation: ^2.2.0
-  auto_route_generator: ^8.0.0
+  auto_route_generator: ^9.0.0
   flutter_lints: ^4.0.0
 flutter:
   uses-material-design: true
@@ -103,5 +100,3 @@ flutter:
           weight: 600
         - asset: assets/fonts/Poppins-ExtraLight.ttf
           weight: 400
-
-
