🧪 test(patrol test):
integration patrol test on app

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,17 +46,19 @@ android {
     productFlavors {
         dev {
           dimension "app"
-          applicationId "com.magenta.dev"
-
-        
+          applicationIdSuffix ".dev"
+          versionNameSuffix ".dev"
+          resValue "string", "app_name", "Magenta DEV"  
         }
         prod {
           dimension "app"
-          applicationId "com.magenta.prod"          
+          resValue "string", "app_name", "Magenta" 
         }
         stag {
           dimension "app"
-          applicationId "com.magenta.stage"          
+          applicationIdSuffix ".stag"
+          versionNameSuffix ".stag"
+          resValue "string", "app_name", "Magenta STAGE"
         }
     }
     defaultConfig {
@@ -65,6 +67,8 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        testInstrumentationRunner "pl.leancode.patrol.PatrolJUnitRunner"
+        testInstrumentationRunnerArguments clearPackageData: "true"
     }
 
     buildTypes {
@@ -74,6 +78,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.debug
         }
+    }
+    testOptions {
+    execution "ANDROIDX_TEST_ORCHESTRATOR"
     }
 }
 
@@ -85,4 +92,7 @@ dependencies {
     implementation(platform("com.google.firebase:firebase-bom:33.1.1"))
     implementation("com.google.firebase:firebase-crashlytics")
     implementation("com.google.firebase:firebase-analytics")
+}
+dependencies {
+    androidTestUtil "androidx.test:orchestrator:1.4.2"
 }
