--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,6 @@ dependencies:
   firebase_core: ^3.1.0
   firebase_messaging: ^15.0.1
   flutter_local_notifications: ^17.0.0
-  internet_connection_checker: ^2.0.0
   json_annotation: ^4.8.1
   path: ^1.9.0
   flutter_animate: ^4.5.0
@@ -80,6 +79,7 @@ dev_dependencies:
   freezed_annotation: ^2.2.0
   auto_route_generator: ^9.0.0
   flutter_lints: ^4.0.0
+  patrol: ^3.11.0
 flutter:
   uses-material-design: true
   assets:
@@ -100,3 +100,7 @@ flutter:
           weight: 600
         - asset: assets/fonts/Poppins-ExtraLight.ttf
           weight: 400
+patrol:
+  flavor: dev
+  android:
+    package_name: com.magenta.repo
